--- a/index.html
+++ b/index.html
@@ -22,6 +22,15 @@
         pleas let us know how we did with your support request. All feedback is appreciated to help us improveour
         offering!
       </p>
+      <form name="rate" onsubmit="return thankForm()" method="post">
+        <div class="rating">
+          <label for="rating-1">
+            <input type="radio" name="rating" id="rating-1" value="1">
+            <span>1</span>
+          </label>
+        </div>
+
+      </form>
 
     </article>
 
