:construction: Termino da estruturação do HTML
Finalização da estruturação do HTML com  preparo para receber a estilização do CSS

--- a/index.html
+++ b/index.html
@@ -28,35 +28,43 @@
             <input type="radio" name="rating" id="rating-1" value="1">
             <span>1</span>
           </label>
+          <label for="rating-2">
+            <input type="radio" name="rating" id="rating-2" value="2">
+            <span>2</span>
+          </label>
+          <label for="rating-3">
+            <input type="radio" name="rating" id="rating-3" value="2">
+            <span>3</span>
+          </label>
+          <label for="rating-4">
+            <input type="radio" name="rating" id="rating-4" value="4">
+            <span>4</span>
+          </label>
+          <label for="rating-5">
+            <input type="radio" nome="rating" id="rating-5" value="5">
+            <span>5</span>
+          </label>
         </div>
-
+        <button type="submit">Submit</button>
       </form>
-
     </article>
-
-
-    1 2 3 4 5
-
-    Submit
-
-    <!-- Rating state end -->
-
-    <!-- Thank you state start -->
-
-    You selected <!-- Add rating here --> out of 5
-
-    Thank you!
-
-    We appreciate you taking the time to give a rating. If you ever need more support,
-    don’t hesitate to get in touch!
-
-    <!-- Thank you state end -->
-
-
-    <div class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-      Coded by <a href="#">Your Name Here</a>.
-    </div>
+    <article id="agradecimento-art">
+      <img src="./images/illustration-thank-you.svg" alt="thank you">
+      <div>
+        <p>You Selected<span id="escolhido">0</span> out of 5</p>
+      </div>
+      <h2>Thank you!</h2>
+      <p>
+        We appreciate you thanking the time to give a rating. If you ever need more supporte, dont hesitate to get in
+        touch!
+      </p>
+    </article>
+  </main>
+  <footer class="attribution">
+    <p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.</p>
+    <p>Coded by <a href="https://github.com/EdsonBJJ" target="_blank">Edson Sequeira</a>.</p>
+  </footer>
 </body>
+<script src="script.js"></script>
 
 </html>
