--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Overpass:wght@400;700&display=swap" rel="stylesheet">
   <title>Interactive rating component</title>
 
 </head>
@@ -19,8 +22,9 @@
       </figure>
       <h2>How did we do?</h2>
       <p>
-        pleas let us know how we did with your support request. All feedback is appreciated to help us improveour
-        offering!
+        Please let us know how we did with your
+        support request. All feedback is appreciated
+        to help us improve our offering!
       </p>
       <form name="rate" onsubmit="return thankForm()" method="post">
         <div class="rating">
@@ -33,7 +37,7 @@
             <span>2</span>
           </label>
           <label for="rating-3">
-            <input type="radio" name="rating" id="rating-3" value="2">
+            <input type="radio" name="rating" id="rating-3" value="3">
             <span>3</span>
           </label>
           <label for="rating-4">
@@ -41,28 +45,30 @@
             <span>4</span>
           </label>
           <label for="rating-5">
-            <input type="radio" nome="rating" id="rating-5" value="5">
+            <input type="radio" name="rating" id="rating-5" value="5">
             <span>5</span>
           </label>
         </div>
         <button type="submit">Submit</button>
       </form>
     </article>
-    <article id="agradecimento-art">
+    <article id="agradecimento">
       <img src="./images/illustration-thank-you.svg" alt="thank you">
       <div>
-        <p>You Selected<span id="escolhido">0</span> out of 5</p>
+        <p>You selected <span id="escolhido">0</span> out of 5</p>
       </div>
       <h2>Thank you!</h2>
       <p>
-        We appreciate you thanking the time to give a rating. If you ever need more supporte, dont hesitate to get in
-        touch!
+        We appreciate you taking the time to give a
+        rating. If you ever need more support, dont
+        hesitate to get in touch!
       </p>
     </article>
   </main>
   <footer class="attribution">
-    <p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.</p>
-    <p>Coded by <a href="https://github.com/EdsonBJJ" target="_blank">Edson Sequeira</a>.</p>
+    <p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. </p>
+    <p>Coded by <a href="https://github.com/EdsonBJJ/Interactive_rating_component" target="_blank">Edson Sequeira</a>.
+    </p>
   </footer>
 </body>
 <script src="script.js"></script>
